--- a/flappy.html
+++ b/flappy.html
@@ -231,7 +231,7 @@ function loop(){
   requestAnimationFrame(loop);
   // Background image
 const bgImg = new Image();
-bgImg.src = "bg.png"; // name of your background image
+bgImg.src = "bg.jpeg"; // name of your background image
 
 }
 loop();
@@ -248,4 +248,5 @@ if('serviceWorker' in navigator){
 </script>
 </body>
 </html>
+
 
